--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,20 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.0.2",
+        "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "amphp/amp": "v3.x-dev",
+        "doctrine/annotations": "^1.13",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/http-client": "6.0.*",
+        "symfony/options-resolver": "6.0.*",
         "symfony/runtime": "6.0.*",
+        "symfony/twig-bundle": "6.0.*",
         "symfony/yaml": "6.0.*"
-    },
-    "require-dev": {
     },
     "config": {
         "allow-plugins": {
@@ -66,5 +69,12 @@
             "allow-contrib": false,
             "require": "6.0.*"
         }
+    },
+    "require-dev": {
+        "symfony/debug-bundle": "6.0.*",
+        "symfony/maker-bundle": "^1.38",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/stopwatch": "6.0.*",
+        "symfony/web-profiler-bundle": "6.0.*"
     }
 }
