--- a/.env
+++ b/.env
@@ -17,3 +17,5 @@
 APP_ENV=dev
 APP_SECRET=879745bca76496155845c086f2425f4f
 ###< symfony/framework-bundle ###
+
+API_ENDPOINT=https://api.programme-tv.net
