--- a/config/services.yaml
+++ b/config/services.yaml
@@ -30,3 +30,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    http_client:
+        class: App\HttpClient\FiberAmpHttpClient
