--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,5 +1,6 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
+    ide: phpstorm
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     http_method_override: false
