--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,6 +27,7 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+            - '../src/Page/BlockResolver.php'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
