--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,15 @@
         "amphp/byte-stream": "v2.x-dev",
         "amphp/http-client": "v5.x-dev",
         "doctrine/annotations": "^1.13",
-        "symfony/console": "6.0.*",
-        "symfony/dotenv": "6.0.*",
+        "symfony/console": "6.1.*",
+        "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
-        "symfony/framework-bundle": "6.0.*",
-        "symfony/http-client": "6.0.*",
-        "symfony/options-resolver": "6.0.*",
-        "symfony/runtime": "6.0.*",
-        "symfony/twig-bundle": "6.0.*",
-        "symfony/yaml": "6.0.*"
+        "symfony/framework-bundle": "6.1.*",
+        "symfony/http-client": "6.1.*",
+        "symfony/options-resolver": "6.1.*",
+        "symfony/runtime": "6.1.*",
+        "symfony/twig-bundle": "6.1.*",
+        "symfony/yaml": "6.1.*"
     },
     "config": {
         "allow-plugins": {
@@ -45,11 +45,7 @@
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php72": "*",
-        "symfony/polyfill-php73": "*",
-        "symfony/polyfill-php74": "*",
-        "symfony/polyfill-php80": "*"
+        "symfony/polyfill-iconv": "*"
     },
     "scripts": {
         "auto-scripts": {
@@ -69,14 +65,14 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.0.*"
+            "require": "6.1.*"
         }
     },
     "require-dev": {
-        "symfony/debug-bundle": "6.0.*",
+        "symfony/debug-bundle": "6.1.*",
         "symfony/maker-bundle": "^1.38",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/stopwatch": "6.0.*",
-        "symfony/web-profiler-bundle": "6.0.*"
+        "symfony/stopwatch": "6.1.*",
+        "symfony/web-profiler-bundle": "6.1.*"
     }
 }
